<resources>
    <string name="app_name">Forum</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Jelszó</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">szte forum unofficial logo</string>
    <string name="forum_image_icon_description">forum image icon (folder)</string>
    <string name="register">Regisztráció</string>
    <string name="login_guest">Belépés vendégként</string>
    <string name="guest_icon_description">guest icon (user)</string>
    <string name="login">Bejelentkezés</string>
    <string name="password">Jelszó</string>
    <string name="email">Email</string>
    <string name="profile_avatar_description">profile avatar</string>
    <string name="avatar_modify">Profilkép módosítása</string>
    <string name="name">Név</string>
    <string name="logout">Kijelentkezés</string>
    <string name="back_to_login">Vissza a bejelentkezéshez</string>
    <string name="thread_icon_description">thread icon (note sticky)</string>
    <string name="comment_prompt">Írj egy kommentet…</string>
    <string name="send_button">Küldés</string>
    <string name="thread_create_button">Létrehozás</string>
    <string name="cancel">Mégse</string>
    <string name="thread_create_content">Üzenet</string>
    <string name="thread_create_title">Cím</string>
    <string name="navigate_icon_description">navigate icon</string>
    <string name="category_icon_description">category icon (list)</string>
    <string name="delete_icon_description">delete icon (trashcan)</string>
    <string name="edit_icon_description">edit icon (pencil)</string>
    <string name="example_date">1970–01–01</string>
    <string name="save">Mentés</string>
    <string name="comments_counter">Kommentek: %d</string>
    <string name="homepage">Kezdőlap</string>
    <string name="new_thread">Új Téma</string>
    <string name="account">Fiók</string>
    <string name="error">(error)</string>
    <string name="thread_delete_failure">Sikertelen téma törlés!</string>
    <string name="thread_message_send_requirement_error">Nem küldhetsz üres üzenetet!</string>
    <string name="thread_message_send_failure">Sikertelen üzenet küldés!</string>
    <string name="thread_message_delete_failure">Üzenet törlés sikertelen!</string>
    <string name="thread_message_save_failure">Üzenet mentése sikertelen!</string>
    <string name="thread_message_empty_error">Nem küldhetsz üres üzenetet!</string>
    <string name="thread_messages_load_error">Üzenetek betöltése sikertelen!</string>
    <string name="thread_create_failure">Nem sikerült létrehozni a témát!</string>
    <string name="thread_create_title_error">Kérlek adj meg egy címet!</string>
    <string name="thread_create_content_error">Kérlek adj meg egy szöveget!</string>
    <string name="registration_failure">Nem sikerült a regisztráció!</string>
    <string name="registration_success">Regisztráció sikeres!</string>
    <string name="registration_username_empty">Kérlek adj meg egy felhasználónevet!</string>
    <string name="registration_password_empty">Kérlek adj meg egy jelszót!</string>
    <string name="registration_email_empty">Kérlek adj meg egy e-mailt!</string>
    <string name="avatar_load_failure">Az Avatar betöltése nem sikerült.</string>
    <string name="choose_image">Kép kiválasztása</string>
    <string name="avatar_upload_success">Avatar sikeresen feltöltve!</string>
    <string name="avatar_upload_failure">Nem sikerült feltölteni az Avatar-t!</string>
    <string name="login_email_empty">Kérlek adj meg egy e-mailt!</string>
    <string name="login_password_empty">Kérlek adj meg egy jelszót!</string>
    <string name="login_failure">Sikertelen bejelentkezés!</string>
    <string name="notification_thread_title">Új téma</string>
    <string name="notification_thread_message">Szólj hozzá a(z) %s témához!</string>
    <string name="notification_thread_open">Megnyitás</string>
</resources>