<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/profile_avatar_description"
            android:src="@drawable/user_solid" />

        <TextView
            android:id="@+id/profile_image_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/avatar_modify" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_image_upload"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/email"
            android:textSize="14sp" />

        <Button
            android:id="@+id/profile_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/logout" />

    </RelativeLayout>

</FrameLayout>