<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <ImageView
            android:id="@+id/forum_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:contentDescription="@string/forum_image_icon_description"
            android:src="@drawable/folder_solid" />

        <TextView
            android:id="@+id/forum_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/forum_image"
            android:text="@string/lorem_ipsum_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/forum_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/forum_title"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@id/forum_details"
            android:layout_toEndOf="@id/forum_image"
            android:text="@string/lorem_ipsum"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/forum_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:src="@drawable/baseline_arrow_forward_24"
            android:contentDescription="@string/navigate_icon_description" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>