<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <ImageView
        android:id="@+id/category_image"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@string/category_icon_description"
        android:src="@drawable/list_solid" />

    <TextView
        android:id="@+id/category_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/category_image"
        android:text="@string/lorem_ipsum_title"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/category_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/category_image"
        android:text="@string/lorem_ipsum"
        android:textSize="14sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/category_description"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/black" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:id="@+id/category_forums" />

</RelativeLayout>